--- a/application/static/sass/base/_mixins.sass
+++ b/application/static/sass/base/_mixins.sass
@@ -12,3 +12,7 @@
 @mixin large-breakpoint
   @media (min-width: #{$desktop})
     @content
+
+@mixin margin-center
+  margin-right: auto
+  margin-left: auto
