--- a/application/static/sass/components/_navigation.sass
+++ b/application/static/sass/components/_navigation.sass
@@ -10,10 +10,10 @@ header
 
     .wrapper
         display: flex
-        justify-content: space-between
+        justify-content: center
         align-items: center
         height: 3rem
-        //column-gap: 1rem
+        column-gap: 1em
 
     span
         opacity: 35%
