--- a/application/static/sass/components/_modals.sass
+++ b/application/static/sass/components/_modals.sass
@@ -7,7 +7,6 @@
     right: 0
     z-index: 2
 
-
     &[aria-hidden='true']
         display: none
 
@@ -21,25 +20,24 @@
     animation: fade-in 200ms both
 
 .dialog-content
-    background-color: rgba(255, 255, 255, 0.877)
+    background-color: rgba(231, 231, 231, 0.988)
     backdrop-filter: blur(5px)
     margin: auto
     z-index: 2
     position: relative
     animation: fade-in 400ms 200ms both, slide-up 400ms 200ms both
-    padding: 1em
+    padding: 0 1em
     max-width: 90%
     width: 750px
     border-radius: 4px
-    border-top: 2rem solid $primary-color
-
+    //border-top: 1.5rem solid $primary-color
 
     &.center
         text-align: center
 
-@media screen and (min-width: 700px)
-    .dialog-content
-        padding: 2em
+    @media screen and (min-width: 700px)
+        padding: 0 2em
+        //border-top: 2.5rem solid $primary-color
 
 @keyframes fade-in
   from
@@ -53,7 +51,7 @@
     margin: 0
     font-size: 1.25em
 
-.dialog-close
+.dialog-close_classic
     position: absolute
     top: 0.5em
     right: 0.5em
@@ -69,7 +67,11 @@
     transition: 0.15s
     color: #000
 
-@media screen and (min-width: 700px)
-    .dialog-close
+    @media screen and (min-width: 700px)
         top: 1em
         right: 1em
+
+.dialog-close
+    margin-top: 1em
+    margin-bottom: 1em
+    float: right
