--- a/application/static/sass/components/_scaffolding.sass
+++ b/application/static/sass/components/_scaffolding.sass
@@ -37,16 +37,83 @@ ul li ul
 ol li ol
   margin-bottom: 0
 
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6
+  margin-top: 0
+  margin-bottom: 0
+  font-weight: 300
+  font-family: $heading-font-family
 
+h1,
+.h1
+  font-size: 2.8rem
+  line-height: 1.2  
+  letter-spacing: -.1rem
+h2,
+.h2 
+  font-size: 2.5rem
+  line-height: 1.25 
+  letter-spacing: -.1rem
+h3,
+.h3
+  font-size: 2.2rem
+  line-height: 1.3  
+  letter-spacing: -.1rem
+h4,
+.h4
+  font-size: 1.9rem
+  line-height: 1.35 
+  letter-spacing: -.08rem
+h5,
+.h5
+  font-size: 1.7rem 
+  line-height: 1.5  
+  letter-spacing: -.05rem
+h6,
+.h6
+  font-size: 1.5rem
+  line-height: 1.6  
+  letter-spacing: 0
 
-h1
-    font-size: unquote("clamp(1.5rem, 2vw + 1rem, 2.25rem)")
+/* Larger than phablet */
+@media (min-width: 800px)
+  h1,
+  .h1
+    font-size: 3.2rem
+  h2  ,
+  .h2
+    font-size: 2.8rem
+  h3,
+  .h3 
+    font-size: 2.4rem
+  h4,
+  .h4
+    font-size: 2.0rem
+  h5,
+  .h5
+    font-size: 1.7rem
+  h6,
+  .h6
+    font-size: 1.5rem
 
-p
-  font-size: unquote("clamp(1rem, 2vw + 1rem, 1.429rem))")
-
-
-
+p,
+span,
+ol,
+ul,
+li
+  font-size: 1.1rem
+  margin-top: 0
+  font-family: $font-family
 
 // Headings
 // h1,
@@ -117,7 +184,6 @@ a.fancy-link,
   color: $link-color
   text-decoration: none
   font-weight: 400
-  font-style: italic
   transition-duration: 0.4s
 
   &:hover
@@ -220,10 +286,9 @@ dd
 
 // Container
 .container
+  @include margin-center
   max-width: $large
   padding: 0 $padding
-  margin-left: auto
-  margin-right: auto
 
 // Small container
 .small-container
@@ -237,11 +302,8 @@ dd
 
 // Wrapper, horizontally centered
 .wrapper
-  margin-right: auto
-  margin-left: auto
-
+  @include margin-center
   max-width: 980px
-
   padding-right: 3.5rem
   padding-left: 3.5rem
 
@@ -255,11 +317,9 @@ div.content-section
 
 .info
   // height: 100%
-  background-color: #e4c0c0;
+  background-color: #e4c0c0
   border-radius: 4px
   padding: 20px
-  border-left: 4px solid rgb(124, 18, 18);
+  border-left: 4px solid rgb(124, 18, 18)
 
 .sidebar
-  
-  
