--- a/application/static/sass/main.css
+++ b/application/static/sass/main.css
@@ -46,12 +46,102 @@ ol li ol {
   margin-bottom: 0;
 }
 
-h1 {
-  font-size: clamp(1.5rem, 2vw + 1rem, 2.25rem);
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 300;
+  font-family: "Domine", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
-p {
-  font-size: clamp(1rem, 2vw + 1rem, 1.429rem));
+h1,
+.h1 {
+  font-size: 2.8rem;
+  line-height: 1.2;
+  letter-spacing: -.1rem;
+}
+
+h2,
+.h2 {
+  font-size: 2.5rem;
+  line-height: 1.25;
+  letter-spacing: -.1rem;
+}
+
+h3,
+.h3 {
+  font-size: 2.2rem;
+  line-height: 1.3;
+  letter-spacing: -.1rem;
+}
+
+h4,
+.h4 {
+  font-size: 1.9rem;
+  line-height: 1.35;
+  letter-spacing: -.08rem;
+}
+
+h5,
+.h5 {
+  font-size: 1.7rem;
+  line-height: 1.5;
+  letter-spacing: -.05rem;
+}
+
+h6,
+.h6 {
+  font-size: 1.5rem;
+  line-height: 1.6;
+  letter-spacing: 0;
+}
+
+/* Larger than phablet */
+@media (min-width: 800px) {
+  h1,
+  .h1 {
+    font-size: 3.2rem;
+  }
+  h2,
+  .h2 {
+    font-size: 2.8rem;
+  }
+  h3,
+  .h3 {
+    font-size: 2.4rem;
+  }
+  h4,
+  .h4 {
+    font-size: 2.0rem;
+  }
+  h5,
+  .h5 {
+    font-size: 1.7rem;
+  }
+  h6,
+  .h6 {
+    font-size: 1.5rem;
+  }
+}
+
+p,
+span,
+ol,
+ul,
+li {
+  font-size: 1.1rem;
+  margin-top: 0;
+  font-family: "Jost", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
 a.fancy-link,
@@ -62,7 +152,6 @@ a.fancy-link,
   color: #a31800;
   text-decoration: none;
   font-weight: 400;
-  font-style: italic;
   -webkit-transition-duration: 0.4s;
           transition-duration: 0.4s;
 }
@@ -183,10 +272,10 @@ dd {
 }
 
 .container, .small-container, .medium-container {
+  margin-right: auto;
+  margin-left: auto;
   max-width: 1200px;
   padding: 0 1rem;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .small-container {
@@ -510,6 +599,10 @@ div.content-section {
   padding-left: 0;
 }
 
+.spacer {
+  padding: 1em 0;
+}
+
 /**
  * Buttons
  */
@@ -531,6 +624,8 @@ div.content-section {
   cursor: pointer;
   text-decoration: none;
   line-height: 1;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
 }
 
 .button:hover, a.button:hover, button:hover, [type=submit]:hover, [type=reset]:hover, [type=button]:hover {
@@ -538,6 +633,8 @@ div.content-section {
   background: #701000;
   color: #ffffff;
   text-decoration: none;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .button:focus, .button:active, a.button:focus, a.button:active, button:focus, button:active, [type=submit]:focus, [type=submit]:active, [type=reset]:focus, [type=reset]:active, [type=button]:focus, [type=button]:active {
@@ -582,6 +679,13 @@ a.muted-button:active {
   color: #1f1f1f;
   border: 1px solid #818181;
   background: transparent;
+}
+
+.light-button,
+a.light-button {
+  background: #ebebeb;
+  border: #ebebeb;
+  color: #161616;
 }
 
 .round-button,
@@ -771,13 +875,15 @@ header .header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   height: 3rem;
+  -webkit-column-gap: 1em;
+          column-gap: 1em;
 }
 
 .navbar span {
@@ -848,7 +954,7 @@ header .header {
 }
 
 .dialog-content {
-  background-color: rgba(255, 255, 255, 0.877);
+  background-color: rgba(231, 231, 231, 0.988);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   margin: auto;
@@ -856,11 +962,10 @@ header .header {
   position: relative;
   -webkit-animation: fade-in 400ms 200ms both, slide-up 400ms 200ms both;
           animation: fade-in 400ms 200ms both, slide-up 400ms 200ms both;
-  padding: 1em;
+  padding: 0 1em;
   max-width: 90%;
   width: 750px;
   border-radius: 4px;
-  border-top: 2rem solid #a31800;
 }
 
 .dialog-content.center {
@@ -869,7 +974,7 @@ header .header {
 
 @media screen and (min-width: 700px) {
   .dialog-content {
-    padding: 2em;
+    padding: 0 2em;
   }
 }
 
@@ -904,7 +1009,7 @@ header .header {
   font-size: 1.25em;
 }
 
-.dialog-close {
+.dialog-close_classic {
   position: absolute;
   top: 0.5em;
   right: 0.5em;
@@ -923,10 +1028,16 @@ header .header {
 }
 
 @media screen and (min-width: 700px) {
-  .dialog-close {
+  .dialog-close_classic {
     top: 1em;
     right: 1em;
   }
+}
+
+.dialog-close {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  float: right;
 }
 
 div.card-container {
@@ -1016,6 +1127,20 @@ a.poster img {
   }
 }
 
+#mb_prod-poster {
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+  width: 60vw;
+}
+
+@media only screen and (min-width: 800px) {
+  #mb_prod-poster {
+    display: none;
+    width: 90vw;
+  }
+}
+
 #artist-credits-mobile,
 #artist-credits-title,
 #nav-menu-trigger {
@@ -1032,7 +1157,7 @@ a.poster img {
 
 @media only screen and (max-width: 800px) {
   #header-brand {
-    border-bottom: 3px solid #a31800;
+    background-color: #a31800;
   }
 }
 /*# sourceMappingURL=main.css.map */
