--- a/application/static/sass/base/_variables.sass
+++ b/application/static/sass/base/_variables.sass
@@ -55,7 +55,7 @@ $line-height: 1.6 !default
 // Headings
 $heading-font-color: #e9e9e9 !default
 $heading-font-weight: 600 !default
-$heading-font-family: 'Domine', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif !default
+$heading-font-family: 'Vollkorn', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif !default
 $heading-line-height: 1.2 !default
 
 $h1-mobile: 1.75rem !default
