--- a/application/static/sass/components/_blocks.sass
+++ b/application/static/sass/components/_blocks.sass
@@ -6,6 +6,7 @@ div.card-container
     row-gap: 1.5rem
 
     .card 
+        @include shadow
         // display: flex-inline
         align-items: center
         padding: 5px
