--- a/application/static/sass/components/_navigation.sass
+++ b/application/static/sass/components/_navigation.sass
@@ -46,5 +46,5 @@ header
 
     &:hover
         transition: ease-out 0.2s
-        border: 4px solid #ff6d6d91
+        border: 4px solid #b66f6f
         -webkit-transition: ease-out 0.2s
