--- a/application/blueprints/production/templates/production.html
+++ b/application/blueprints/production/templates/production.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = "production" %}
 
 {% block content %}
 <h1>{{ production.title }}</h1>
@@ -23,7 +24,7 @@
 <div class="production-body-content">
     
     {% if notices %}
-    <h2>Notices</h2>
+    <h2 class="h3 margin-top">Notices</h2>
     <div class="notice-accordion-body margin-top">
         <div class="notice-accordion">
             {% for pt, notice, notice_type in notices %}
@@ -37,7 +38,7 @@
     </div>
     {% endif %}
     
-    <h2 class="margin-bottom margin-top">Description</h2>
+    <h2 class="h3 margin-bottom margin-top">Description</h2>
     <span class="prod-content-wrapper">{{ production.description | safe }}</span>
     {% if poster %}
     <div id="mb_prod-poster">
@@ -57,7 +58,7 @@
         <br />
         <div class="full-width"></div>
         {% if cast %}
-        <h2>Cast</h2>
+        <h2 class="margin-bottom">Cast</h2>
         <div class="card-container text-center justify-center">
             {% for person in cast %}
 
@@ -92,7 +93,7 @@
         {% endif %}
 
         {% if crew %}
-        <h2>Crew</h2>
+        <h2 class="margin-bottom">Crew</h2>
         <div class="card-container text-center justify-center">
             {% for person in crew %}
             <div class="card clean {% if person.artist_id %}img{% endif %}">
