--- a/application/static/sass/main.css
+++ b/application/static/sass/main.css
@@ -61,7 +61,7 @@ h6,
   margin-top: 0;
   margin-bottom: 0;
   font-weight: 300;
-  font-family: "Domine", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: "Vollkorn", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
 h1,
@@ -571,10 +571,34 @@ div.content-section {
           flex-direction: row;
 }
 
+.flex-1 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.flex-2 {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
 .flex-3 {
   -webkit-box-flex: 3;
       -ms-flex: 3;
           flex: 3;
+}
+
+.flex-4 {
+  -webkit-box-flex: 4;
+      -ms-flex: 4;
+          flex: 4;
+}
+
+.flex-5 {
+  -webkit-box-flex: 5;
+      -ms-flex: 5;
+          flex: 5;
 }
 
 .flex-6 {
@@ -601,6 +625,231 @@ div.content-section {
 
 .spacer {
   padding: 1em 0;
+  width: 2rem;
+}
+
+.mt-1 {
+  margin-top: 0.75rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.75rem;
+}
+
+.ml-1 {
+  margin-left: 0.75rem;
+}
+
+.mr-1 {
+  margin-right: 0.75rem;
+}
+
+.mt-2 {
+  margin-top: 1.5rem;
+}
+
+.mb-2 {
+  margin-bottom: 1.5rem;
+}
+
+.ml-2 {
+  margin-left: 1.5rem;
+}
+
+.mr-2 {
+  margin-right: 1.5rem;
+}
+
+.mt-3 {
+  margin-top: 2.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 2.25rem;
+}
+
+.ml-3 {
+  margin-left: 2.25rem;
+}
+
+.mr-3 {
+  margin-right: 2.25rem;
+}
+
+.mt-4 {
+  margin-top: 3rem;
+}
+
+.mb-4 {
+  margin-bottom: 3rem;
+}
+
+.ml-4 {
+  margin-left: 3rem;
+}
+
+.mr-4 {
+  margin-right: 3rem;
+}
+
+.mt-5 {
+  margin-top: 3.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 3.75rem;
+}
+
+.ml-5 {
+  margin-left: 3.75rem;
+}
+
+.mr-5 {
+  margin-right: 3.75rem;
+}
+
+.mt-6 {
+  margin-top: 4.5rem;
+}
+
+.mb-6 {
+  margin-bottom: 4.5rem;
+}
+
+.ml-6 {
+  margin-left: 4.5rem;
+}
+
+.mr-6 {
+  margin-right: 4.5rem;
+}
+
+.mt-auto {
+  margin-top: auto;
+}
+
+.mb-auto {
+  margin-bottom: auto;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.pt-1 {
+  padding-top: 0.5rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.5rem;
+}
+
+.pl-1 {
+  padding-left: 0.5rem;
+}
+
+.pr-1 {
+  padding-right: 0.5rem;
+}
+
+.pt-2 {
+  padding-top: 1rem;
+}
+
+.pb-2 {
+  padding-bottom: 1rem;
+}
+
+.pl-2 {
+  padding-left: 1rem;
+}
+
+.pr-2 {
+  padding-right: 1rem;
+}
+
+.pt-3 {
+  padding-top: 1.5rem;
+}
+
+.pb-3 {
+  padding-bottom: 1.5rem;
+}
+
+.pl-3 {
+  padding-left: 1.5rem;
+}
+
+.pr-3 {
+  padding-right: 1.5rem;
+}
+
+.pt-4 {
+  padding-top: 2rem;
+}
+
+.pb-4 {
+  padding-bottom: 2rem;
+}
+
+.pl-4 {
+  padding-left: 2rem;
+}
+
+.pr-4 {
+  padding-right: 2rem;
+}
+
+.pt-5 {
+  padding-top: 2.5rem;
+}
+
+.pb-5 {
+  padding-bottom: 2.5rem;
+}
+
+.pl-5 {
+  padding-left: 2.5rem;
+}
+
+.pr-5 {
+  padding-right: 2.5rem;
+}
+
+.pt-6 {
+  padding-top: 3rem;
+}
+
+.pb-6 {
+  padding-bottom: 3rem;
+}
+
+.pl-6 {
+  padding-left: 3rem;
+}
+
+.pr-6 {
+  padding-right: 3rem;
+}
+
+.mxw-90 {
+  max-width: 90%;
+}
+
+.mxw-80 {
+  max-width: 80%;
+}
+
+.mxw-70 {
+  max-width: 70%;
+}
+
+.mxw-60 {
+  max-width: 60%;
 }
 
 /**
@@ -922,7 +1171,7 @@ header .header {
 
 .logo-circle:hover {
   transition: ease-out 0.2s;
-  border: 4px solid #ff6d6d91;
+  border: 4px solid #b66f6f;
   -webkit-transition: ease-out 0.2s;
 }
 
@@ -1052,6 +1301,8 @@ div.card-container {
 }
 
 div.card-container .card {
+  -webkit-box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.05);
+          box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.05);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1094,8 +1345,8 @@ div.card-container .card.img {
   margin: 4rem 0;
 }
 
-#poster,
-#headshot {
+#headshot,
+#poster {
   width: 100%;
   border-radius: 4px;
   -o-object-fit: scale-down;
@@ -1103,7 +1354,10 @@ div.card-container .card.img {
 }
 
 a.poster img {
+  -webkit-box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.05);
+          box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.05);
   margin-left: 1rem;
+  border-radius: 4px;
 }
 
 .sidebar {
@@ -1116,13 +1370,21 @@ a.poster img {
           flex-direction: column;
 }
 
+#news-list .card {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 650px;
+}
+
 /**
  * Layout
  */
 @media only screen and (max-width: 800px) {
   div.sidebar,
   #brand-name,
-  .navbar {
+  .navbar,
+  a.poster,
+  #contact-form .spacer {
     display: none;
   }
 }
@@ -1158,6 +1420,15 @@ a.poster img {
 @media only screen and (max-width: 800px) {
   #header-brand {
     background-color: #a31800;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #contact-form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 /*# sourceMappingURL=main.css.map */
