Remove unnecessary packages, Python min version to 3.8.

--- a/application/templates/contact.html
+++ b/application/templates/contact.html
@@ -6,7 +6,7 @@
     <div class="flex-3">
         <h1 class="text-center h2 margin-bottom">Contact Us</h1>
         <p class="">
-            Email us at <a href="mailto:info@queertk.org">info@queertk.org</a> or fill out the form on this page. Only a subject and message are required - if you choose not to provide a name and email, your message will be completely anonymous.
+            Email us at <a class="fancy-link" href="mailto:info@queertk.org">info@queertk.org</a> or fill out the form on this page. Only the subject and message fields are required — if you choose not to provide a name and/or email, your message will be completely anonymous.
         </p>
     </div>
     <div class="spacer"></div>
