App can now send email from gmail. Contact Us form now functions (sends email with content).

--- a/application/templates/contact.html
+++ b/application/templates/contact.html
@@ -10,7 +10,7 @@
         </p>
     </div>
     <div class="spacer"></div>
-    <form method="POST" action="/" class="flex-4">
+    <form method="POST" action="{{ url_for('contact_us') }}" class="flex-4">
         {{ form.csrf_token }}
         {{ form.name.label }} {{ form.name(size=50) }}
         {{ form.email.label }} {{ form.email(size=120) }}
